leave not working yet and alignment issues

--- a/src/components/Chat/ChatDetails.styl
+++ b/src/components/Chat/ChatDetails.styl
@@ -16,26 +16,28 @@
  */
 
 .ChatDetails {
-    box-shadow: 0px 2px 3px rgba(0,0,0,0.2);
+    position: absolute;
+    right: 0rem;
+    box-shadow: 0px 1px 1px rgba(0,0,0,0.2);
     border: 1px solid transparent;
-    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.16), 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.16), 0px 1px 1px 0px rgba(0, 0, 0, 0.15);
     themed background-color shade4
     themed border-color shade3
     themed color fg
-    max-width: 240px;
-    padding: 0.2rem;
+    max-width: 130px;
+    padding: 0.1rem;
 
     .actions {
-        margin-top: 0.5rem;
+        margin-top: 0.1rem;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
 
         > button {
-            min-width: 48%;
+            min-width: 98%;
             text-align: left;
             .fa, .ogs-goban {
-                padding-right: 0.5rem;
+                padding-right: 0.1rem;
             }
         }
     }
